<resources>

    <string name="user_account">账号</string>
    <string name="user_hint_phone">请输入手机号</string>
    <string name="user_hint_password">请输入密码</string>
    <string name="user_save_password">记住密码</string>
    <string name="user_reset_password">忘记密码?</string>
    <string name="user_login">登录</string>
    <string name="user_go">基层诊所医生的业务利器</string>
    <string name="user__server_phone">客服电话:400-666-196</string>
    <string name="user_password">密码</string>
</resources>
