<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.hospital.s1m.lib_user.login.LoginActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:src="@drawable/user_login" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/editText_tel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/user_import_border"
        android:layout_below="@id/imageView2"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_account"
            android:textSize="@dimen/user_text_size_15"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:textColor="#999999"
            tools:ignore="SpUsage" />
        <View
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:background="#E5E5E5"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dip"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dip"
            android:hint="@string/user_hint_phone"
            android:background="@null"
            android:textColor="#C6C6C6"
            android:inputType="phone|number"
            android:id="@+id/login_tel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/editText_pwd"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/user_import_border"
        android:layout_below="@id/editText_tel"
        android:orientation="horizontal"
        android:layout_marginTop="20dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_password"
            android:textSize="@dimen/user_text_size_15"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:textColor="#999999"
            tools:ignore="SpUsage" />
        <View
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:background="#E5E5E5"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dip"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dip"
            android:hint="@string/user_hint_password"
            android:background="@null"
            android:textColor="#C6C6C6"
            android:inputType="textPassword"
            android:id="@+id/login_pwd"/>
    </LinearLayout>
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/remember_pwd"
        android:layout_width="wrap_content"
        android:layout_height="25dip"
        android:theme="@style/user_yycheckbox"
        android:layout_marginStart="30dip"
        android:layout_marginTop="22dip"
        android:layout_below="@id/editText_pwd"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_save_password"
        android:layout_below="@id/editText_pwd"
        android:layout_toEndOf="@id/remember_pwd"
        android:layout_marginTop="25dip"
        android:layout_marginStart="5dip" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_reset_password"
        android:textColor="#4998E7"
        android:id="@+id/forget_pwd"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editText_pwd"
        android:layout_marginEnd="30dip"
        android:layout_marginTop="25dip"
        android:layout_marginStart="5dip"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/but_login"
        android:text="@string/user_login"
        android:textColor="#FFFF"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/user_shape_but"
        android:layout_marginTop="40dip"
        android:textSize="@dimen/user_text_size_20"
        android:layout_below="@id/forget_pwd"
        tools:ignore="SpUsage" />
    <TextView
        android:layout_width="198dp"
        android:layout_height="18dp"
        android:textSize="18sp"
        android:id="@+id/bottom_text_one"
        android:text="@string/user_go"
        android:layout_marginTop="536dp"
        android:layout_centerHorizontal="true"
        android:textColor="#2C71AE"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user__server_phone"
        android:textSize="14sp"
        android:layout_marginTop="561dp"
        android:layout_centerHorizontal="true"
        android:textColor="#A1A1A1"/>
</RelativeLayout>
